<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.SignUp"

        >


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="73dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="20dp" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/avatar"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintEnd_toEndOf="@+id/profile_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up_to_cenntrum"
            android:textColor="@color/light_black"
            app:layout_constraintEnd_toEndOf="@+id/image_layout"
            app:layout_constraintStart_toStartOf="@+id/image_layout"
            app:layout_constraintTop_toBottomOf="@+id/image_layout" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <EditText
                android:id="@+id/firstname_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:drawablePadding="15dp"
                android:hint="@string/enter_first_name"
                android:paddingVertical="7dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/light_black"
                android:drawableStart="@drawable/person"
                android:background="@drawable/bg_et"
                android:inputType="text"
                android:imeOptions="actionNext"

                />

            <EditText
                android:id="@+id/lastname_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrg_10"
                android:ems="10"
                android:drawablePadding="15dp"
                android:hint="@string/enter_last_name"
                android:paddingVertical="7dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/light_black"
                android:drawableStart="@drawable/person"
                android:background="@drawable/bg_et"
                android:inputType="text"
                android:imeOptions="actionNext"

                />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:drawablePadding="15dp"
                android:hint="@string/enter_email"
                android:paddingVertical="7dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/light_black"
                android:drawableStart="@drawable/email"
                android:background="@drawable/bg_et"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                />
            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:drawablePadding="15dp"
                android:hint="@string/enter_password"
                android:paddingVertical="7dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/light_black"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:background="@drawable/bg_et"
                android:inputType="textPassword"
                android:imeOptions="actionNext"

                />

            <TextView
                android:id="@+id/dob_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrg_10"
                android:ems="10"
                android:drawablePadding="15dp"
                android:hint="@string/enter_date_of_birth"
                android:paddingVertical="10dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/light_black"
                android:drawableStart="@drawable/dob"
                android:background="@drawable/bg_et"
                />

            <RadioGroup
                android:id="@+id/radioGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:drawablePadding="15dp"
                android:paddingHorizontal="15dp"
                android:background="@drawable/bg_et"
                android:weightSum="2"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/male_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:checked="true"
                    />

                <RadioButton
                    android:id="@+id/female_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"

                    />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mrg_10"
                android:background="@drawable/bg_et"
                android:padding="@dimen/_3sdp"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_countryPreference="US,PK"
                    app:ccp_defaultPhoneCode="92"
                    />


                <EditText
                    android:id="@+id/editText_carrierNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="phone"
                    android:inputType="phone"
                    android:background="@null"
                    android:singleLine="true" />
            </LinearLayout>


        </LinearLayout>



        <CheckBox
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/i_ve_accepted_terms_amp_conditions_and_privacy_policy"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/mrg_10"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/layout" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="130dp"
            android:layout_height="38dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:background="@drawable/bg_et"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />



        <TextView
            android:id="@+id/tv_dont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_sign_in"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/signup_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>