<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="name"
            type="String" />

        <variable
            name="preferences"
            type="com.cc.cenntrum.utils.SavedPreference" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leftDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"

            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_left_drawer"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/navHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_20sdp"
                android:paddingBottom="@dimen/_15sdp">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/drawer_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                 />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="#BDBDBD" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/points"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_points"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/my_points"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/rewards"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_rewards"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/my_rewards"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/incentives"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/incentives"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/incentives"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/exchange_points"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/exchange_points"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/exchange_points"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/logout"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/log_out"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/close_drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@id/linearLayout"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

